[package]
name = "experiment_1"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.5"
peroxide = "0.30"
itertools = "0.10.3"
rand_chacha = "0.3.1"
get-size = { version = "^0.1", features = ["derive"] }
